[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "codexauthutil"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["click", "rich", "httpx"]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "respx"]

[project.scripts]
codexauth = "codexauth:cli"

[tool.setuptools.packages.find]
include = ["codexauth*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
